[package]
name = "block-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk         = "1.10.25"
serde_json         = "1.0.81"
serde              = "1.0.104"
sb-backend-3-actix = {path = 'sb-backend-3-actix'}
actix              = '0.13.0'
actix-rt           = '2.7.0'
bs58               = "0.4.0"
hex                = "0.4.3"


[workspace]
members = [
    "sb-backend-3-actix",
]

[[bin]]
name  = "block-processing"
test  = false
bench = false
